[tool.poetry]
name = "jd"
version = "0.1.0"
description = ""
authors = ["dxy <daniel.yang17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
torchvision = "^0.8.2"
opencv-python = "^4.4.0"
tensorflow = "^2.4.0"
pandas = "^1.1.5"
seaborn = "^0.11.1"
jupyterlab = "^2.2.9"
jupyter = "^1.0.0"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
